--- a/MyBoardGameApp/src/main/resources/com/liel/boardgame/board.fxml
+++ b/MyBoardGameApp/src/main/resources/com/liel/boardgame/board.fxml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.*?>
-
-<BorderPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.liel.boardgame.ui.BoardController">
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:id="root" style="-fx-background-color: lightblue;"
+            xmlns="http://javafx.com/javafx/10.0.2-internal" fx:controller="com.liel.boardgame.ui.BoardController">
     <center>
-        <GridPane fx:id="gameBoard">
+        <!--      <ScrollPane fx:id="scrollPane"  style="-fx-background-color: lightblue;" BorderPane.alignment="CENTER_RIGHT">-->
+        <!--         <content>-->
+        <GridPane fx:id="gameBoard" style="-fx-background-color: lightblue;">
             <columnConstraints>
-                <ColumnConstraints />
+                <ColumnConstraints/>
             </columnConstraints>
         </GridPane>
-
+        <!--         </content>-->
+        <!--      </ScrollPane>-->
     </center>
 </BorderPane>
